# libgtop

./: .cvsignore  .gitignore  .gitlab-ci.yml  .tags  ANNOUNCE  ANNOUNCE-1.0  AUTHORS  ChangeLog  LIBGTOP-VERSION  MAINTAINERS  Makefile.am  NEWS  NEWS.old  README  RELNOTES-1.0  RELNOTES-1.0.x  RELNOTES-1.1.x  TODO  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  copyright.txt  features.def  glib-tap.mk  glibtop-server-private.h  glibtop.h  gtopConf.sh.in  libgtop-2.0.pc.in  libgtop-config.in  libgtop-mirror.sh  libgtop-sysdeps.m4  libgtop.doap  libgtop.spec  libgtop.spec.in  libgtopConf.sh.in  libgtopconfig.h.in  ltconfig  structures.def  (+2 more)
backends/common/: ChangeLog  Makefile.am  backend-common.c  backend-common.h  libgtop-common.backend  marshal.pl
backends/server/: .cvsignore  ChangeLog  Makefile.am  backend-server.c  backend-server.h  command.c  command.h.in  command.pl  demarshal.pl  glibtop-backend-private.h  io.c  libgtop-server.backend  marshal.pl  read.c  read_data.c  server.c  server.h  version.c  write.c
backends/sysdeps/: ChangeLog  Makefile.am  backend-sysdeps.c  backend-sysdeps.h  call-vector.c  glibtop-backend-private.h  libgtop-sysdeps.backend  marshal.pl
data/: Makefile.am  org.gnome.GTop.NetStats.conf  org.gnome.GTop.NetStats.service.in
doc/: .cvsignore  ChangeLog  Makefile  Makefile.am  README  about.texi  auto-macros.texi.in  autoconf.sgml  gnome-hackers.dsl  gnome-hackers.sgml  internals.texi  libgtop-ref.dsl  libgtop-ref.sgml  libgtop.dsl  libgtop.sgml  libgtop.texi  libgtop2.texi  libgtopConf.sh  main.texi  reference.texi  table.announce.txt  table.dsl  table.sgml  white-paper.texi
doc/features/: proclist.sgml  procmem.sgml  uptime.sgml  uptime.txt
doc/reference/: Makefile.am  libgtop-docs.xml  libgtop-sections.txt
examples/: .cvsignore  ChangeLog  Makefile.am  affinity.c  dbus_interface.c  devtest.c  df.c  disk.c  diskio.c  first.c  free.c  mem.c  mountlist.c  netlist.c  netload.c  openfiles.c  pprint.c  procargs.c  proclist.c  procmap.c  second.c  smp.c  sysdeps.c  sysinfo.c  test.scm  third.c  third.scm  timings.c  wd.c
guile/: .cvsignore  ChangeLog  Makefile.am  dynamic.c  dynamic_names.c  features.awk  header.scm  make-docbook.scm  make-header.scm  reference.sgml
include/glibtop/: Makefile.am  array.h  backend.h  call-vector.h.in  call-vector.pl  close.h  command.h  compat_10.h  connection.h  cpu.h  dev_handles.h  disk.h  error.h  errors.h  fsusage.h  glib-arrays.h  glibtop-backend-info.h  glibtop-backend.h  glibtop-client.h  glibtop-server.h  global.h  gnuserv.h  init_hooks.h  inodedb.h  interface_local_addr.h  interfaces.h  limits.h  loadavg.h  machine.h  mem.h  mountlist.h  msg_limits.h  net_process.h  netinfo.h  netlist.h  netload.h  netsockets.h  netstats.h  open.h  output.h  (+35 more)
lib/: .cvsignore  Makefile.am  backend.c  boxed.c  close.c  command.c  cpu.c  error.c  errors.c  glib-arrays.c  glibtop-backend-info.c  glibtop-backend.c  glibtop-client-private.h  glibtop-client.c  glibtop-server-private.h  glibtop-server.c  gnuclient.c  init-backends.c  init.c  inodedb.c  lib.awk  lib.pl  libgtop.sym  loadavg.c  mem.c  msg_limits.c  open-backend.c  open.c  parameter.c  prockernel.c  proclist.c  procmem.c  procsegment.c  procsignal.c  procstate.c  proctime.c  procuid.c  read.c  read_data.c  sem_limits.c  (+15 more)
perl/: .cvsignore  Automakefile.am  ChangeLog  Changes  Libgtop.pm  MANIFEST  MANIFEST.SKIP  Makefile.PL.in  README  acconfig.h  autogen.sh  configure.in  new.pl  perl.awk  test.pl  typemap
perl/Names/: .cvsignore  MANIFEST  Makefile.PL.in  Names.pm  names.awk  test.pl
src/daemon/: .cvsignore  ChangeLog  Makefile.am  daemon.h  gnuclient.c  gnuserv.c  gnuserv.h  gnuslib.c  io.c  main.c  server.c  server_config.h  server_config.h.in  server_config.pl  slave.c  version.c
src/inodedb/: .cvsignore  Makefile.am  README.inodedb  file_by_inode.c  file_by_inode2.c  mkinodedb.c  mkinodedb2.c
src/proxy/: .cvsignore  Makefile.am  main.c  version.c
src/server/: .cvsignore  Makefile.am  main.c  output.c
sysdeps/aix/: ChangeLog  Makefile.am  close.c  cpu.c  disk.c  glibtop_machine.h  glibtop_server.h  glibtop_suid.h  loadavg.c  mem.c  msg_limits.c  netlist.c  netload.c  nosuid.c  open.c  ppp.c  procargs.c  prockernel.c  proclist.c  procmap.c  procmem.c  procsegment.c  procsignal.c  procstate.c  proctime.c  procuid.c  sem_limits.c  shm_limits.c  siglist.c  swap.c  sysinfo.c  uptime.c  utils.c  utils.h
sysdeps/bsd/: ChangeLog  Makefile.am  NOTES  close.c  cpu.c  fsusage.c  glibtop_machine.h  glibtop_server.h  glibtop_suid.h  init.c  loadavg.c  mem.c  msg_limits.c  netlist.c  netload.c  nosuid.c  open.c  ppp.c  procargs.c  procdata.c  prockernel.c  proclist.c  procmap.c  procmem.c  procopenfiles.c  procsegment.c  procsignal.c  procstate.c  proctime.c  procuid.c  sem_limits.c  shm_limits.c  siglist.c  swap.c  sysinfo.c  uptime.c
sysdeps/common/: .cvsignore  ChangeLog  Makefile.am  README.fsusage  backend.c  default.c  dev_handles.c  error.c  error_suid.c  fsusage-frontend.c  fsusage.c  fsusage.h  gnuslib.c  inodedb.c  mountlist.c  mountlist.h  net_process.c  netsockets.c  proc_inode_parser.c  procargs.c  stats.c  sysdeps.c  sysdeps_suid.c  xmalloc.c  xmalloc_suid.c
sysdeps/cygwin/: Makefile.am  cpu.c  glibtop_machine.h  glibtop_private.c  glibtop_private.h  glibtop_server.h  loadavg.c  mem.c  mountlist.c  msg_limits.c  netlist.c  netload.c  open.c  ppp.c  procaffinity.c  procargs.c  prockernel.c  proclist.c  procmap.c  procmem.c  procopenfiles.c  procsegment.c  procsignal.c  procstate.c  proctime.c  procuid.c  procwd.c  sem_limits.c  shm_limits.c  swap.c  sysinfo.c  uptime.c
sysdeps/freebsd/: AUTHORS  ChangeLog  Makefile.am  close.c  cpu.c  fsusage.c  glibtop_machine.h  glibtop_private.c  glibtop_private.h  glibtop_server.h  glibtop_suid.h  init.c  interfaces.c  loadavg.c  mem.c  mountlist.c  msg_limits.c  netinfo.c  netlist.c  netload.c  nosuid.c  open.c  ppp.c  procaffinity.c  procargs.c  procdata.c  procdiskio.c  procio.c  prockernel.c  proclist.c  procmap.c  procmem.c  procopenfiles.c  (+13 more)
tests/: Makefile.am  cpuinfo-tests.c
(+647 files in other folders)
